<resources>
	<string name="app_name">Android Examples</string>
	<!-- test strings start -->

	<string name="test_small">Lorem ipsum</string>
	<string name="test_medium">Lorem ipsum dolor sit amet, saperet minimum ei nam, ea dicat menandri pericula vel.
	</string>
	<string name="test_large">Lorem ipsum dolor sit amet, saperet minimum ei nam, ea dicat menandri pericula vel. Modus
		dicam eligendi cu mea, et pri viris audiam disputando, an vix choro constituto comprehensam. Eu qui ignota
		accusam persecuti. Eu pro probo interesset, his solum utroque insolens ex.
	</string>

	<!-- test strings end -->
	<eat-comment/>

	<!-- BottomNavigationView -->
	<eat-comment/>
	<string name="action_components_title">Components</string>
	<string name="action_patterns_title">Patterns</string>
	<string name="action_libs_title">Libraries</string>

	<!-- Activity names -->
	<eat-comment/>

	<string name="title_activity_settings">Settings</string>
	<string name="activity_components_flat_button">Flat Button | Components</string>
	<string name="activity_components_raised_button">Raised Button | Components</string>
	<string name="activity_components_image_button">Icon button | Components</string>
	<string name="activity_components_togglebutton">ToggleButton | Components</string>

	<!-- Settings fragment strings -->
	<eat-comment/>

	<string name="pref_category_general_title">General</string>
	<string name="pref_theme_title">Theme</string>
	<string name="pref_theme_summary">Select a theme to be used for all of the examples. Applies on restart of
		the app.
	</string>
	<string name="pref_theme_default">material_components</string>
	<string-array name="pref_theme_entries">
		<item>Theme.App</item>
		<item>Theme.App.MaterialComponents</item>
		<item>Theme.App.MaterialComponents.DayNight</item>
	</string-array>
	<string-array name="pref_theme_entry_values" translatable="false">
		<item>bridge</item>
		<item>material_components</item>
		<item>material_components_daynight</item>
	</string-array>
	<string name="pref_apply_theme_examples_title">Apply theme to examples</string>
	<string name="pref_dark_theme_title">Dark theme</string>
	<string name="pref_dark_theme_summary">Enables dark mode for all of the examples. Applies on restart of the
		app.
	</string>
	<string name="pref_dark_theme_default">auto_battery_saver</string>
	<string-array name="pref_dark_theme_entries">
		<item>Always on</item>
		<item>Automatic (battery saver)</item>
		<item>Follow system</item>
		<item>Always off</item>
	</string-array>
	<string-array name="pref_dark_theme_entry_values" translatable="false">
		<item>always_on</item>
		<item>auto_battery_saver</item>
		<item>follow_system</item>
		<item>always_off</item>
	</string-array>
	<string name="pref_category_about_title">About</string>
	<string name="pref_about_app_info_title">App info</string>
	<string name="pref_about_app_info_summary">Visit the app\'s info page in Settings</string>
	<string name="pref_about_app_version_title">App version</string>
	<string name="pref_about_app_src_title">Source code</string>
	<string name="pref_about_app_src_summary">Visit the app\'s source code on GitHub</string>
	<string name="pref_about_author_title">Author</string>
	<string name="pref_about_author_summary">Edric Chan</string>
	<string name="pref_about_credits_title">Based on materialdoc.com</string>

	<!-- Strings adapted from materialdoc.doc -->
	<eat-comment/>

	<string name="normal">Normal</string>
	<string name="disabled">Disabled</string>
	<string name="custom_style">Custom Style</string>
	<string name="Button">Button</string>
	<string name="enabled">Enabled</string>
	<string name="single_line">Single Line</string>
	<string name="styled">Styled</string>
	<string name="multi_line">Multi Line</string>
	<string name="determinate">Determinate</string>
	<string name="indeterminate">Indeterminate</string>
	<string name="buffered">Buffered</string>
	<string name="indeterminate_and_determinate">Indeterminate &amp; Determinate</string>
	<string name="Check_Box">Check Box</string>
	<string name="Radio_Button">Radio Button</string>
	<string name="Hint_text">Hint text</string>
	<string name="To">To</string>
	<string name="Subject">Subject</string>
	<string name="Message">Message</string>
	<string name="Title">Title</string>
	<string name="Price">Price</string>
	<string name="Location">Location (optional)</string>
	<string name="Description">Description</string>
	<string name="Vintage">Vintage 50</string>
	<string name="Personal_info">Personal info</string>
	<string name="First_name">First name</string>
	<string name="Birthday">Birthday</string>
	<string name="Show_error">Show error</string>
	<string name="Hide_error">Hide error</string>
	<string name="First_name_is_required">First name is required</string>
	<string name="Date_pattern">MM/DD/YYYY"</string>
	<string name="Show_dialog">Show dialog</string>
	<string name="Show_styled_dialog">Show styled dialog</string>
	<string name="show_single_choice_dialog">Show single choice dialog</string>
	<string name="show_multi_choice_dialog">Show multi choice dialog</string>
	<string name="dialog_title">Use Google\'s location service?</string>
	<string name="confirmation_dialog_title">Phone ringtone</string>
	<string name="dialog_message">Let Google help apps determine location. This means sending anonymous location data to
		Google, even when no apps are running.
	</string>
	<string name="show_snack_bar">Show snack bar</string>
	<string name="hide_snack_bar">Hide snack bar</string>
	<string name="show_styled_snack_bar">Show styled stack bar</string>
	<string name="show_toast">Show toast</string>
	<string name="show_styled_toast">Show styled toast</string>
	<string name="hide_toast">Hide toast</string>
	<string name="toolbar">Toolbar</string>
	<string name="action_settings">Settings</string>
	<string name="search">Search</string>
	<string name="favorite">Favorite</string>
	<string name="action_refresh">Refresh</string>
	<string name="action_feedback">Feedback</string>
	<string name="action_leave">Leave</string>
	<string name="show_date_picker">Show Date Picker</string>
	<string name="hide_date_picker">Hide Date Picker</string>
	<string name="show_styled_date_picker">Show Styled Date Picker</string>
	<string name="show_time_picker">Show Time Picker</string>
	<string name="show_styled_time_picker">Show Styled Time Picker</string>

	<string-array name="ringtone_list">
		<item>None</item>
		<item>Callisto</item>
		<item>Dione</item>
	</string-array>
</resources>
