<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">
	<PreferenceCategory
			app:key="pref_category_general"
			app:title="@string/pref_category_general_title">
		<ListPreference
				app:defaultValue="@string/pref_theme_default"
				app:entries="@array/pref_theme_entries"
				app:entryValues="@array/pref_theme_entry_values"
				app:key="pref_theme"
				app:summary="@string/pref_theme_summary"
				app:title="@string/pref_theme_title"
				app:useSimpleSummaryProvider="true" />
		<SwitchPreferenceCompat
				app:defaultValue="true"
				app:key="pref_apply_theme_examples"
				app:title="@string/pref_apply_theme_examples_title" />
		<ListPreference
				app:defaultValue="@string/pref_dark_theme_default"
				app:entries="@array/pref_dark_theme_entries"
				app:entryValues="@array/pref_dark_theme_entry_values"
				app:key="pref_dark_theme"
				app:summary="@string/pref_dark_theme_summary"
				app:title="@string/pref_dark_theme_title"
				app:useSimpleSummaryProvider="true" />
	</PreferenceCategory>
	<PreferenceCategory
			app:key="pref_category_about"
			app:title="@string/pref_category_about_title">
		<Preference
				app:key="pref_about_app_info"
				app:summary="@string/pref_about_app_info_summary"
				app:title="@string/pref_about_app_info_title" />
		<Preference
				app:enableCopying="true"
				app:key="pref_about_app_version"
				app:title="@string/pref_about_app_version_title" />
		<Preference
				app:key="pref_about_app_src"
				app:summary="@string/pref_about_app_src_summary"
				app:title="@string/pref_about_app_src_title" />
		<Preference
				app:key="pref_about_author"
				app:summary="@string/pref_about_author_summary"
				app:title="@string/pref_about_author_title" />
		<Preference
				app:key="pref_about_credits"
				app:title="@string/pref_about_credits_title" />
	</PreferenceCategory>
</androidx.preference.PreferenceScreen>